-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.10.0
-
Component/s: Dart - Compiler
-
Labels:None
In order to match the Dart style guide, class members should be lowerCamelCase. This would also be more consistent with how Dart produces names for struct fields. However, the name in TMessage should stay the same to ensure no adverse impact on server communication.