THRIFT-3719: Dart generator should use lowerCamelCase for service names Client: Dart Patch: Mark Erickson

This closes #932